# icp-js-bindgen

./: .cz.toml  .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  biome.json  clippy.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.lib.json  tsconfig.test.json  tsconfig.vite.json  vite.config.ts  vitest.config.ts
.github/: CONTRIBUTING.md
.github/repo_policies/: BOT_APPROVED_FILES
.github/workflows/: audit.yml  codestyle.yml  create-release-pr.yml  publish-docs.yml  release.yml  test.yml
docs/: .gitignore  package.json  typedoc.json
src/: constants.ts  index.ts
src/cli/: icp-bindgen.ts
src/core/: constants.ts  index.ts
src/core/generate/: bindings.ts  constants.ts  fs.ts  index.ts  rs.ts
src/core/generate/rs/: Cargo.toml
src/core/generate/rs/src/: fs.rs  lib.rs  parser.rs
src/core/generate/rs/src/bindings/: comments.rs  javascript.rs  mod.rs  typescript.rs
src/core/generate/rs/src/bindings/typescript_native/: comments.rs  compile.rs  compile_interface.rs  compile_wrapper.rs  conversion_functions_generator.rs  mod.rs  new_typescript_native_types.rs  original_typescript_types.rs  utils.rs
src/core/generate/rs/src/bindings/typescript_native/preamble/: actor.rs  imports.rs  options.rs
src/plugins/: index.ts  vite.ts
src/plugins/utils/: constants.ts  log.ts  watch.ts
tests/: cli.test.ts  generate.test.ts  security.test.ts  typecheck.test.ts  vite-plugin.test.ts  wasm-generate.test.ts  wasm-init.test.ts
tests/assets/: example.did  malicious_doc.did
tests/utils/: wasm.ts
(+62 files in other folders)
